[package]
name = "simd-stuff"
version = "0.1.0"
edition = "2018"

[features]
default = []
# default = ["aarch64-simd"]
aarch64-simd = []  # nightly only

[dependencies]
rand = "0.8"
memmap2 = "0.5"
capstone = "0.10"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
